# doc/api.yaml
@@ -5,7 +5,7 @@ info:
     This is the API for the WASA Homework 1 by 1967862.
   version: 0.0.1
 servers:
-  - url: http://127.0.0.1
+  - url: http://127.0.0.1:3000
 
 
 
@@ -440,14 +440,6 @@ paths:
       security:
         - bearerAuth: []
   
-  /users/{id}/photos/{photo_id}/likes/{like_id}:
-
-    parameters:
-      - $ref: '#/components/parameters/user_id'
-      - $ref: '#/components/parameters/photo_id'
-      - $ref: '#/components/parameters/like_id'
-
-
     delete:
       tags:
         - likes
